--- a/mealmatch/web/index.html
+++ b/mealmatch/web/index.html
@@ -24,15 +24,37 @@
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="mealmatch">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  <link rel="apple-touch-icon" href="icons/mm_apple-icon.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" type="image/png" href="mm_favicon.png"/>
 
   <title>mealmatch</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
+  <!-- Firebase SDK -->
+  <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-firestore-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-storage-compat.js"></script>
+  
+  <script>
+    // Your Firebase configuration
+    const firebaseConfig = {
+      apiKey: "AIzaSyCWcalMmmNEDtmRnBSjmIViccw4bUp5DOc",
+      authDomain: "mealmatch-ec825.firebaseapp.com",
+      projectId: "mealmatch-ec825",
+      storageBucket: "mealmatch-ec825.firebasestorage.app",
+      messagingSenderId: "173097778841",
+      appId: "1:173097778841:web:232eb226a869a17edc8208",
+      measurementId: "G-JEW02ZTPY4"
+    };
+    
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+  </script>
+
   <script src="flutter_bootstrap.js" async></script>
 </body>
 </html>
